--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -48,3 +48,5 @@ $headings-margin-bottom: 10px;
 
 $toc--background-color: #f5ecdf;
 $toc--border-color: #212529;
+$toc--link-color: #005285;
+$toc--link-hover-color: #22527c;
